--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+btleplug = "0.11.8"
 clap = { version = "4.5.3", features = ["derive"] }
+futures = "0.3.31"
+rand = "0.9.2"
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+uuid = "1.18.1"
